[WIP] Validate the controller input
Issue-ID: CPS-449
